# glucose_data_processing

./: .cursorrules  .env.template  .gitignore  AGENTS.md  README.md  compare_checkpoints.py  download.py  glucose_cli.py  glucose_config.yaml  glucose_config_ai_ready.yaml  glucose_config_combined.yaml  glucose_config_new.yaml  glucose_ml_preprocessor.py  pyproject.toml
docs/: cli.md  config.md  datasets.csv  schemas.md
formats/: __init__.py  ai_readi_schema.json  ai_ready_schema.yaml  base_converter.py  database_converters.py  database_detector.py  dexcom_database_converter.py  dexcom_g6_converter.py  dexcom_schema.json  dexcom_schema.yaml  format_detector.py  freestyle_libre3_converter.py  freestyle_libre3_schema.json  freestyle_libre3_schema.yaml  hupa_schema.yaml  libre3_database_converter.py  loop_schema.yaml  medtronic_schema.yaml  minidose1_schema.yaml  uc_ht_schema.yaml  uom_activity_converter.py  uom_basal_converter.py  uom_bolus_converter.py  uom_converter.py  uom_database_converter.py  uom_glucose_converter.py  uom_nutrition_converter.py  uom_schema.json  uom_schema.yaml  uom_sleep_converter.py  uom_sleeptime_converter.py
formats/hupa/: HUPA.md  (+4 more)
libre3/: FreeStyle_Libre_3__11-12-2024.csv
notebooks/: reading_of_large_csv.ipynb
processing/: stats_manager.py
tests/: README.md  TEST_REPORT.md  test_calibration_schema_logic.py  test_compare_checkpoints.py  test_database_converters_real_data.py  test_download.py  test_fixed_frequency_continuous_fields.py  test_fixed_frequency_edge_cases.py  test_fixed_frequency_logic.py  test_glucose_ml_preprocessor_steps.py  (+5 more)
(+49 files in other folders)
