[project]
name = "glucos-dataset"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.2",
    "polars>=1.33.1",
    "pyarrow>=21.0.0",
    "typer>=0.12.0",
    "pyyaml>=6.0",
    "eliot",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
